@@ -11,6 +11,7 @@
         * [BUGFIX]: #3154 Fixed crash when mass replacing token to another token containing initial token.
         * [BUGFIX]: Fixed query generation for "UPDATE" and "DELETE" when invoking it from Database List context menu for the table.
         * [BUGFIX]: Fixed Ctrl+click (Cmd+click on MacOSX) handling of object names that require name wrapping (such as names with spaces in it).
+        * [BUGFIX]: #3133 Fixed resolving tables with unusual (like cyrillic) characters in their names.
         * [BUGFIX]: Compilation fixes.
 
 [3.1.0]
